# go_validate_yourself

./: LICENSE.txt  README.md  go.mod  main.go  pyproject.toml  schema.example.json
gvy_sdk/: __init__.py  client.py
internal/api/: server.go  server_test.go
internal/batchparquet/: batch.go
internal/console/: console.go
internal/service/: service.go
internal/splitcsv/: split.go
internal/validator/: validator.go
