[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gvy-sdk"
version = "0.1.0"
description = "Python SDK for the go_validate_yourself local API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Appadon" }
]
dependencies = []

[tool.setuptools]
packages = ["gvy_sdk"]
